RAS-1400 use native sql (#450)
* RAS-1400 use native sql
